--- a/project/bootload/bootload/keil_ln882x/boot_ln882x.uvprojx
+++ b/project/bootload/bootload/keil_ln882x/boot_ln882x.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>boot_ram</OutputName>
+          <OutputName>boot_ln882x</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
@@ -82,7 +82,7 @@
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>python3  ..\..\..\..\tools\python_scripts\after_build_for_boot.py  --keilproj  #P  --output  boot_ram.bin</UserProg1Name>
+            <UserProg1Name>python3  ..\..\..\..\tools\python_scripts\after_build_for_boot.py  --keilproj  #P  --output  boot_ln882x.bin</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -328,8 +328,8 @@
             <uC99>1</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>1</v6Lang>
-            <v6LangP>1</v6LangP>
+            <v6Lang>3</v6Lang>
+            <v6LangP>3</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
             <v6Lto>0</v6Lto>
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>LN882x</Define>
+              <Define>LN882x __FILE__</Define>
               <Undefine></Undefine>
               <IncludePath>..\..\..\..\mcu\ln88xx;..\..\..\..\mcu\CMSIS_5.3.0;..\..\..\..\mcu\driver_ln882x\inc;..\..\..\..\mcu\driver_ln882x\inc\reg;..\..\..\..\components;..\..\..\..\components\serial;..\..\..\..\components\fs\partition_mgr;..\..\..\..\components\fota\ota_agent;..\..\..\..\components\fs\nvds;..\bsp;..\main;..\cfg</IncludePath>
             </VariousControls>
